[gd_scene load_steps=11 format=3 uid="uid://by66laxewwc5j"]

[ext_resource type="Script" uid="uid://cvrm7pgcss7qb" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://gui/FlatUI4/kenneyUI.tres" id="1_sugp2"]
[ext_resource type="FontFile" uid="uid://d0gaa71hjim87" path="res://gui/ProtestRevolution-Regular.ttf" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://kj811blknuv6" path="res://gui/background.jpg" id="3_jyhfs"]
[ext_resource type="Theme" uid="uid://bnhngmri4tfgr" path="res://gui/FlatUI4/kenneyUI-green.tres" id="4_tipki"]
[ext_resource type="Theme" uid="uid://bb6vwl0h1flws" path="res://gui/FlatUI4/kenneyUI-blue.tres" id="6_85g3d"]
[ext_resource type="Theme" uid="uid://h1f7iqhh7ycb" path="res://gui/FlatUI4/kenneyUI-yellow.tres" id="7_choun"]
[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://gui/FlatUI4/kenneyUI-red.tres" id="8_ya4ey"]
[ext_resource type="Texture2D" uid="uid://d1n2ey6xgvsy8" path="res://gui/narrador.png" id="9_85g3d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 12
border_color = Color(0, 0, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sugp2")
script = ExtResource("1_o5qli")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(540, 960)
texture = ExtResource("3_jyhfs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -617.0
offset_top = -253.5
offset_right = 83.0
offset_bottom = 557.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="OpenBooster" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_tipki")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Open Pack
"

[node name="ButtonAuction" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_tipki")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Auction"

[node name="ButtonCollection" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_85g3d")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Collection"

[node name="ButtonDecks" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_85g3d")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Decks"

[node name="ButtonCards" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_85g3d")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Gallery
"

[node name="ButtonLab" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_85g3d")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Laboratory"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -249.5
offset_right = 608.0
offset_bottom = 561.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="ButtonPlay" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_choun")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Memory"

[node name="ButtonGravity" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_choun")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Gravity Mem"

[node name="ButtonShortDuel" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_choun")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Duel"

[node name="ButtonDuels" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_choun")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Battle"

[node name="ButtonSacrifice" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("8_ya4ey")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Sacrifice"

[node name="ButtonJunk" type="Button" parent="VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("8_ya4ey")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Junk"

[node name="MoneyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -321.0
offset_top = 392.0
offset_right = 321.0
offset_bottom = 506.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 96
text = "Â¥999999999999"
horizontal_alignment = 1

[node name="CardsAccount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -321.0
offset_top = 496.0
offset_right = 321.0
offset_bottom = 610.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 48
text = "999 Cards "
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="ButtonReset" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
offset_left = 26.0
offset_top = 141.0
offset_right = 526.0
offset_bottom = 252.251
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("8_ya4ey")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Reset"

[node name="ButtonQuit" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
offset_left = 549.0
offset_top = 141.0
offset_right = 1049.0
offset_bottom = 252.251
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_sugp2")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 72
text = "Quit"

[node name="Message" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -555.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_sugp2")
theme_override_styles/panel = SubResource("StyleBoxFlat_85g3d")

[node name="Narrator" type="Sprite2D" parent="Message"]
position = Vector2(283, 214)
texture = ExtResource("9_85g3d")

[node name="Label" type="Label" parent="Message"]
layout_mode = 0
offset_left = 620.0
offset_top = 20.0
offset_right = 1062.0
offset_bottom = 494.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 42
text = "Four dragons were, the Kami. Tsuchi, the worm with wings from the deep. Mizu, one with the water, guarding the oceans and rivers. Hi, the son of the Sun, pure fire. Kaze, just above everthing always watching in the skies."
autowrap_mode = 3

[node name="NoNarrator" type="Button" parent="Message"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1351.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 62.0
offset_top = 1858.0
offset_right = 526.0
offset_bottom = 1929.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 48
text = "v0.38"
horizontal_alignment = 2

[node name="Ginme" type="Button" parent="Version"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 355.0
offset_right = 11.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Playtime" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -528.0
offset_top = 1858.0
offset_right = 285.0
offset_bottom = 1929.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 48
text = "Time Played: 00:00"

[node name="MoneySpent" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -528.0
offset_top = 1802.0
offset_right = 285.0
offset_bottom = 1873.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_0wfyh")
theme_override_font_sizes/font_size = 48
text = "Money Spent: Â¥0"

[connection signal="pressed" from="VBoxContainer/OpenBooster" to="." method="_on_open_booster_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonAuction" to="." method="_on_button_auction_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCollection" to="." method="_on_button_collection_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonDecks" to="." method="_on_button_decks_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCards" to="." method="_on_button_cards_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLab" to="." method="_on_button_lab_pressed"]
[connection signal="pressed" from="VBoxContainer2/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="VBoxContainer2/ButtonGravity" to="." method="_on_button_gravity_pressed"]
[connection signal="pressed" from="VBoxContainer2/ButtonShortDuel" to="." method="_on_button_short_duel_pressed"]
[connection signal="pressed" from="VBoxContainer2/ButtonDuels" to="." method="_on_button_duels_pressed"]
[connection signal="pressed" from="VBoxContainer2/ButtonSacrifice" to="." method="_on_button_sacrifice_pressed"]
[connection signal="pressed" from="VBoxContainer2/ButtonJunk" to="." method="_on_button_junk_pressed"]
[connection signal="pressed" from="ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="Message/NoNarrator" to="." method="_on_no_narrator_pressed"]
[connection signal="pressed" from="Version/Ginme" to="." method="_on_ginme_pressed"]
